fix(demo): 🎛 Set table border-spacing to 0

--- a/demo/style.scss
+++ b/demo/style.scss
@@ -592,6 +592,7 @@ code {
 table,
 arena-table {
   margin: 0 0 1em;
+  border-spacing: 0;
 }
 
 arena-td,
